build pipeline for necessity, added sql request for status, didnt merge with suggesty commit yet

--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,7 @@
 HOST=localhost
 USER_NAME=root
 PASSWORD=
-DATABASE=
+DATABASE=notifydb
 
-GOOGLE_AUTH=
+GOOGLE_AUTH=AIzaSyDnoNOeMPDa7WkC8NVxO6IZV3K6MRNLA0M
 
