--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "query-string": "^6.9.0",
     "socket.io": "^2.3.0",
     "stringify": "^5.2.0",
-    "unirest": "^0.6.0"
+    "unirest": "^0.6.0",
+    "var_dump": "^1.0.5"
   },
   "devDependencies": {
     "jest": "^24.9.0"
