--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^2.0.0",
     "node-geocoder": "^3.25.0",
+    "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "promise-mysql": "^4.1.1",
     "query-string": "^6.9.0",
