--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
