--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^2.0.0",
+    "nats": "^1.2.4",
     "node-geocoder": "^3.25.0",
     "nodemon": "^2.0.2",
     "promise-mysql": "^4.1.1",
