--- a/config/.env
+++ b/config/.env
@@ -25,3 +25,7 @@ REDIRECT_PRODUCTION=https://stage.vivaconagua.org/notify/v1/events/oauth
 
 CLIENT_ID_DEV=notify
 CLIENT_ID_PRODUCTION=notify
+
+MAIL_HOST=mail.gmx.com
+MAIL_USER=vivatest@gmx.de
+MAIL_PASSWORD=vivapassword
