--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
   "dependencies": {
     "accesscontrol": "^2.2.1",
     "array-sort-by": "^1.2.1",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.2.0",
+    "express-validator": "^6.4.0",
     "geolib": "^3.2.1",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.0.0",
-    "node-geocoder": "^3.25.0",
-    "nodemailer": "^6.4.2",
+    "nats": "^1.2.4",
+    "node-geocoder": "^3.25.1",
     "nodemon": "^2.0.2",
     "promise-mysql": "^4.1.1",
     "query-string": "^6.9.0",
