--- a/config/.env
+++ b/config/.env
@@ -5,3 +5,23 @@ DATABASE=
 
 GOOGLE_AUTH=
 
+
+ENV = dev
+
+WAVES_API_DEV=http://localhost:5000/waves/api/v1
+WAVES_API_PRODUCTION=https://stage.vivaconagua.org/waves/api/v1
+
+SUGGESTY_API_DEV=http://localhost:5001/suggesty/api/v1
+SUGGESTY_API_PRODUCTION=https://stage.vivaconagua.org/suggesty/api/v1
+
+OAUTH_DEV=https://stage.vivaconagua.org
+OAUTH_PRODUCTION=https://stage.vivaconagua.org
+
+FRONTEND_DEV=http://localhost:8080
+FRONTEND_PRODUCTION=https://stage.vivaconagua.org
+
+REDIRECT_DEV=http://localhost:8005/v1/events/oauth
+REDIRECT_PRODUCTION=https://stage.vivaconagua.org/notify/v1/events/oauth
+
+CLIENT_ID_DEV=notify
+CLIENT_ID_PRODUCTION=notify
