--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql2": "^2.0.0",
     "nats": "^1.2.4",
     "node-geocoder": "^3.25.1",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2",
     "promise-mysql": "^4.1.1",
     "query-string": "^6.9.0",
