--- a/config/.env
+++ b/config/.env
@@ -1,12 +1,12 @@
 HOST=localhost
-USER_NAME=root
-PASSWORD=
-DATABASE=
+USER_NAME=notify
+PASSWORD=notify
+DATABASE=notifydb
 
 GOOGLE_AUTH=
 
 
-ENV = dev
+ENV=dev
 
 WAVES_API_DEV=http://localhost:5000/waves/api/v1
 WAVES_API_PRODUCTION=https://stage.vivaconagua.org/waves/api/v1
