--- a/config/.env
+++ b/config/.env
@@ -1,10 +1,9 @@
-HOST=localhost
-USER_NAME=root
-PASSWORD=
-DATABASE=notifydb
+DB_HOST=localhost:27017
+DB_USER_NAME=notify
+DB_PASSWORD=notify
+DB_DATABASE=notifydb
 
-GOOGLE_AUTH=AIzaSyDnoNOeMPDa7WkC8NVxO6IZV3K6MRNLA0M
-
+GOOGLE_AUTH=AIzaSyAN8LOmz-_G1c9KkiYFk4XbKKc0irLNN_k
 
 ENV = dev
 
@@ -29,4 +28,7 @@ CLIENT_ID_PRODUCTION=notify
 MAIL_HOST=mail.gmx.com
 MAIL_USER=vivatest@gmx.de
 MAIL_PASSWORD=vivapassword
+
+NATS_URI=nats://172.23.0.4:4222
+
 
