backend almost finished. TODO: some name changes, delete unnecessary functions, add workflow to readme

--- a/config/.env
+++ b/config/.env
@@ -5,13 +5,7 @@ DB_DATABASE=notifydb
 
 GOOGLE_AUTH=AIzaSyAN8LOmz-_G1c9KkiYFk4XbKKc0irLNN_k
 
-ENV = dev
-
-WAVES_API_DEV=http://localhost:5000/waves/api/v1
-WAVES_API_PRODUCTION=https://stage.vivaconagua.org/waves/api/v1
-
-SUGGESTY_API_DEV=http://localhost:5001/suggesty/api/v1
-SUGGESTY_API_PRODUCTION=https://stage.vivaconagua.org/suggesty/api/v1
+ENV=dev
 
 OAUTH_DEV=https://stage.vivaconagua.org
 OAUTH_PRODUCTION=https://stage.vivaconagua.org
@@ -29,6 +23,7 @@ MAIL_HOST=mail.gmx.com
 MAIL_USER=vivatest@gmx.de
 MAIL_PASSWORD=vivapassword
 
-NATS_URI=nats://172.23.0.4:4222
+NATS_URI=nats://172.2.60.2:4222
 
+TELEGRAM_BOT_TOKEN=1179268780:AAGMKBH8jvzd7j_ZU_aiZSnbJNGqXsZFspc
 
