--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "geo-distance": "^0.2.0",
     "geolib": "^3.2.1",
     "mongoose": "^5.10.2",
     "morgan": "^1.9.1",
@@ -35,7 +36,7 @@
     "nats": "^1.2.4",
     "node-geocoder": "^3.25.1",
     "nodemailer": "^6.4.6",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.6",
     "promise-mysql": "^4.1.1",
     "query-string": "^6.9.0",
     "socket.io": "^2.3.0",
