--- a/config/.env
+++ b/config/.env
@@ -23,7 +23,7 @@ MAIL_HOST=mail.gmx.com
 MAIL_USER=vivatest@gmx.de
 MAIL_PASSWORD=vivapassword
 
-NATS_URI=nats://172.2.60.2:4222
+NATS_URI=nats://localhost:4222
 
 TELEGRAM_BOT_TOKEN=1179268780:AAGMKBH8jvzd7j_ZU_aiZSnbJNGqXsZFspc
 
